--- a/tax.html
+++ b/tax.html
@@ -10,7 +10,7 @@
 
   <title>Tax </title>
 
-   <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+<!--    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
   <link rel="stylesheet" href="https://use.typekit.net/ncb0can.css">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500" rel="stylesheet">
