--- a/index.html
+++ b/index.html
@@ -10,42 +10,18 @@
 
     <title>American Rescue Plan 2021</title>
 
-    <!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"> -->
-    <link rel="stylesheet" href="https://use.typekit.net/ncb0can.css">
-
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Biryani&display=swap" rel="stylesheet">
 
-    <!-- <link rel=“stylesheet” href=“https://use.typekit.net/qof2ldy.css”> -->
-    <link rel = 'stylesheet' href = 'style.css'>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <!-- CSS -->
+    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.typekit.net/ncb0can.css">
 
-    <!-- Bootstrap CSS CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
-
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Spectral:wght@300&display=swap" rel="stylesheet"> -->
-    <link rel="stylesheet" href="style.css">
-
-
-
-
-
-    <!-- link for vis -->
-    <link rel="prefetch" href="https://static.observableusercontent.com/worker/embedworker.51bdaede24caebcaf05ddc11bdcbd805d82c7146e0b018298bd9117f47d2cc72.js" crossorigin>
-    <link rel="prefetch" href="https://api.observablehq.com/@civicdatadesign/american-rescue-plan.js?v=3" crossorigin>
-    <!-- <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-core.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-sunburst.min.js"></script>
-    <script src="https://cdn.anychart.com/releases/8.9.0/js/anychart-data-adapter.min.js"></script> -->
-
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
-<style>
-@import url('https://fonts.googleapis.com/css2?family=Biryani&display=swap');
-</style>
-
-<body   >
+<body>
 
 <!-- 7aabab -->
   <section id = "sec01" >
@@ -201,20 +177,10 @@
 
               </div>
 
-
-
-
-
                 <div class = "line"></div>
-
 
             <h2 style = "font-size:28px ;color: #fff; margin-left: 300px;margin-right: 300px">American Rescue Plan Act of 2021</h2>
             <p style = "font-size:20px ; color: #fff; margin-left: 300px;margin-right: 300px">The U.S. House of Representatives on March 10, 2021, passed the Senate-amended H.R. 1319, the American Rescue Plan (ARP). The ARP provides $1.9 trillion in additional relief to respond to the novel coronavirus (COVID-19). This follows the enactment of nearly $4 trillion in COVID relief in 2020. President Joe Biden called for Congress to enact the ARP to provide relief for individuals and business struggling due to COVID-19, as well as to achieve other priorities of the Biden Administration and Congress. ARP includes provisions on aid to state and local governments, hard-hit industries and communities, tax changes affecting individuals and business, and other provisions.</p>
-
-
-
-
-
         </div>
 
     </div>
@@ -347,18 +313,14 @@
 
 
               <div class = 'col-7'>
+                <div id="chart-sunburst"></div>
                 <!-- visulization  -->
                 <!-- <h2 style = "font-size:25px ;color: #203835;  ">Money distribution for ARP</h2> -->
-                <br></br>
-                <br></br>
-                <br></br>
-                <!-- <iframe width="100%" height="720" frameborder="0"
-                  src="https://observablehq.com/embed/@civicdatadesign/american-rescue-plan?cells=chart"></iframe> -->
+                <br>
+                <br>
+                <br>
                       <div class = 'Vis000'>
                               <!-- <div id="container6"></div> -->
-                            <!-- <iframe class="content" src="https://civicdatadesign.static.observableusercontent.com/worker/embedworker.89cccdff5ba7953e9cf32a8a033b1cc8c9fa90c20ca3c1e670843c26e93e6797.html?cells=chart"
-                              sandbox="allow-same-origin allow-scripts allow-downloads allow-popups allow-forms allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation"
-                              allow="geolocation; microphone; camera; midi; encrypted-media; autoplay; accelerometer; magnetometer; gyroscope; vr"></iframe> -->
 
                       </div>
               </div>
@@ -378,96 +340,12 @@
   </div>
 </section>
 
-    <!-- jQuery CDN - Slim version (=without AJAX) -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <!-- Popper.JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-    <!-- Bootstrap JS -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
     <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="./js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="./js/popper.min.js"></script>
     <script type="text/javascript" src="./js/d3.v6.min.js"></script>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#sidebarCollapse').on('click', function () {
-                $('#sidebar').toggleClass('active');
-            });
-        });
-    </script>
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            $('#sidebarCollapse02').on('click', function () {
-                $('#sidebar02').toggleClass('active');
-                // $(this).toggleClass('active');
-            });
-        });
-    </script>
-
-    <!-- <script>
-        anychart.onDocumentReady(function () {
-         anychart.data.loadJsonFile('https://gist.githubusercontent.com/shacheeswadia/3bbe6eb041166e259f1712e6766fa5a2/raw/341d2796dd63e6e6defc1ec52dd4e73c7828c38c/sunburstDataUpdated.json',
-        //anychart.data.loadJsonFile('https://gist.github.com/yanchaomcp/dbb5ed2ea904915cf93ae65e6f437749',
-          function (data) {
-            // create a data tree from the dataset
-            var dataTree = anychart.data.tree(data);
-
-            // create a sunburst chart
-            var chart = anychart.sunburst(dataTree);
-            // set the calculation mode
-            chart.calculationMode('parent-independent');
-            // set the ascending sort order
-            chart.sort('asc');
-            // set the chart title
-            chart.title("American Rescue Plan 2021");
-
-            // enable HTML in labels
-            chart.labels().useHtml(true);
-            // customize the format of the sunburst chart labels
-
-            chart
-              .level(2)
-              .labels()
-              .fontFamily("transat,sans-serif")
-              .format("<span style='font-size:12px'>{%name}</span>");
-            chart
-              .level(1)
-              .labels()
-              .fontFamily("transat,sans-serif")
-              .format("<span style='font-size:16px'>{%name}</span>");
-            chart
-              .level(0)
-              .labels()
-              .fontFamily("transat,sans-serif")
-              .fontWeight(500)
-              .format("<span style='font-size:16px'>TOTAL Money</span><br><br><span style='font-size:16px'>{%value}{groupsSeparator:\\,}</span>");
-            // enable HTML in tooltips
-            chart.tooltip().useHtml(true);
-            // customize the format of the sunburst chart tooltip
-            chart
-              .tooltip()
-              .fontFamily("transat,sans-serif")
-              .format("<h5 style='font-size:14px; margin: 0.25rem 0;'>{%name}</h5><h6 style='font-size:14px; font-weight:400; margin: 0.2rem 0;'>Total Cases: <b>{%value}{groupsSeparator:\\,}</b></h6><h6 style='font-size:14px; font-weight:400; margin: 0.2rem 0;'>Total Deaths: <b>{%total_deaths}{groupsSeparator:\\,}</b></h6>");
-
-            // configure the chart stroke
-            chart.normal().stroke("#fff", 0.2);
-            // set the point fill
-            chart.fill(function (d) {
-              return anychart.color.darken(this.parentColor, 0.15);
-            });
-
-            // set the chart container element id
-            chart.container('container');
-            // initiate chart drawing
-            chart.draw();
-
-          });
-        });
-    </script> -->
-
-
-
+    <script type="text/javascript" src="./js/script.js"></script>
+    <script type="text/javascript" src="./js/sunburst.js"></script>
 </body>
 <div id = 'footer'>
 
