--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 <div class = "col-11">
                         <div class = "row_title">
                             <div class="col-3">
-                              <h1 style = "font-size:25px ;color:#fff;" ><strong>How is the American</strong> </h1>
-                                <h1 style = "font-size:25px ;color:#fff;" ><strong>rescue plan distributed?</strong></h1>
+                              <h1 class="header-2 text-white"><strong>How is the American <br>
+                                rescue plan distributed?</strong></h1>
                             </div>
                             <div class = 'col-8'></div>
 
@@ -313,16 +313,9 @@
 
 
               <div class = 'col-7'>
-                <div id="chart-sunburst"></div>
                 <!-- visulization  -->
-                <!-- <h2 style = "font-size:25px ;color: #203835;  ">Money distribution for ARP</h2> -->
-                <br>
-                <br>
-                <br>
-                      <div class = 'Vis000'>
-                              <!-- <div id="container6"></div> -->
-
-                      </div>
+                <div id="chart-sunburst"></div>
+                
               </div>
 
               <div class = 'col-2'>
@@ -344,6 +337,7 @@
     <script type="text/javascript" src="./js/bootstrap.min.js"></script>
     <script type="text/javascript" src="./js/popper.min.js"></script>
     <script type="text/javascript" src="./js/d3.v6.min.js"></script>
+
     <script type="text/javascript" src="./js/script.js"></script>
     <script type="text/javascript" src="./js/sunburst.js"></script>
 </body>
